[package]
name = "ecdh"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-secp256k1 = "0.4.0"
ark-std = "0.4.0"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
num-bigint = {version = "0.4.6", features = ["rand"]}
rand = "0.8.5"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
